Uploaded image for project: 'Qpid Proton'
  1. Qpid Proton
  2. PROTON-375

Engine does not indicate when a link has completed draining.

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Closed
    • Major
    • Resolution: Fixed
    • proton-0.4
    • None
    • proton-c, proton-j
    • None

    Description

      The engine API provides the pn_link_drain() method, which allows the application to force the peer to drain its credit.

      The engine API does not provide a way for the application to know when the remote has completed draining. At least there needs to be a way to find out when the remote credit value has been exhausted.

      Attachments

        Issue Links

          Activity

            People

              rhs Rafael H. Schloming
              kgiusti Ken Giusti
              Votes:
              0 Vote for this issue
              Watchers:
              2 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved: