proton-j/proton-api/src/main/java/org/apache/qpid/proton/engine/Receiver.java
@@ -68,4 +68,7 @@ public interface Receiver extends Link
      */
     @Override
     public boolean advance();
+
+    public boolean draining();
+
 }
